<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageProfile"
            android:layout_width="351dp"
            android:layout_height="134dp"
            android:contentDescription="@string/todo"
            android:scaleType="fitCenter"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.061"
            app:srcCompat="@drawable/ic_launcher_foreground" />

        <ProgressBar
            android:id="@+id/progressBarProfile"
            style="?android:attr/progressBarStyle"
            android:layout_width="351dp"
            android:layout_height="134dp"
            android:layout_marginStart="28dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/imagePhoto"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.062"
            tools:ignore="UnknownIdInLayout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutUsername"
            android:layout_width="357dp"
            android:layout_height="62dp"
            android:layout_marginStart="27dp"
            android:layout_marginTop="23dp"
            android:layout_marginEnd="27dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageProfile">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtProfilUsername"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:enabled="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/userName" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutEmail"
            android:layout_width="357dp"
            android:layout_height="62dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="29dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutUsername">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:enabled="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/email" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtInputLayoutFirstName"
            android:layout_width="357dp"
            android:layout_height="61dp"
            android:layout_marginStart="27dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="27dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutEmail">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtChangeFirstName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/first_name"
                android:textColorHint="#616161"
                tools:ignore="TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtInputLayoutLastName"
            android:layout_width="357dp"
            android:layout_height="62dp"
            android:layout_marginStart="27dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="27dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtInputLayoutFirstName">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtChangeLastName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/last_name"
                android:textColorHint="#616161"
                tools:ignore="TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtInputLayoutPassword"
            android:layout_width="360dp"
            android:layout_height="67dp"
            android:layout_marginStart="27dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="27dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtInputLayoutLastName">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtChangePassword"
                android:layout_width="360dp"
                android:layout_height="match_parent"
                android:hint="@string/change_password"
                android:textColorHint="#616161"
                tools:ignore="TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnLogOut"
            android:layout_width="127dp"
            android:layout_height="57dp"
            android:layout_marginEnd="23dp"
            android:layout_marginBottom="10dp"
            android:text="@string/logout"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            app:cornerRadius="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.959"
            app:layout_constraintStart_toEndOf="@+id/btnSave"
            app:layout_constraintTop_toBottomOf="@+id/txtInputLayoutPassword" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="127dp"
            android:layout_height="57dp"
            android:layout_marginStart="36dp"
            android:text="@string/save"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            app:cornerRadius="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtInputLayoutPassword"
            app:layout_constraintVertical_bias="0.386" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>