<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".view.GameListAdapter">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/game_list_item"
        android:layout_width="401dp"
        android:layout_height="425dp">

        <androidx.cardview.widget.CardView
            android:layout_width="385dp"
            android:layout_height="399dp"
            android:layout_margin="8dp"
            android:layout_marginTop="105dp"
            android:background="#FFFFFF"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.421"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="377dp"
                android:layout_height="394dp">


                <ImageView
                    android:id="@+id/imagePhoto"
                    android:layout_width="fill_parent"
                    android:layout_height="133dp"
                    android:contentDescription="@string/todo"
                    android:scaleType="centerCrop"
                    android:visibility="invisible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0"
                    app:srcCompat="@drawable/ic_launcher_foreground" />

                <Button
                    android:id="@+id/btnRead"
                    android:layout_width="141dp"
                    android:layout_height="64dp"
                    android:layout_marginStart="213dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="31dp"
                    android:layout_marginBottom="24dp"
                    android:text="@string/read"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    app:cornerRadius="50dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtdetailDescription" />

                <ProgressBar
                    android:id="@+id/progressBar"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="fill_parent"
                    android:layout_height="133dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/imagePhoto"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/txtTitleRead"
                    android:layout_width="340dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="12dp"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:text="@string/title"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/progressBar"
                    tools:ignore="TextSizeCheck" />

                <TextView
                    android:id="@+id/txtCreator"
                    android:layout_width="204dp"
                    android:layout_height="26dp"
                    android:layout_marginStart="16dp"
                    android:text="@string/creator"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtTitleRead" />

                <TextView
                    android:id="@+id/txtDescription"
                    android:layout_width="325dp"
                    android:layout_height="83dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="11dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/description"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toStartOf="@+id/btnRead"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtCreator" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>