<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".view.GameDetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/game_list_item"
        android:layout_width="match_parent"
        android:layout_height="630dp">

        <androidx.cardview.widget.CardView
            android:layout_width="384dp"
            android:layout_height="613dp"
            android:layout_margin="8dp"
            android:layout_marginTop="24dp"
            android:background="#FFFFFF"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.481"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="367dp"
                android:layout_height="592dp">


                <ImageView
                    android:id="@+id/imagePhoto"
                    android:layout_width="371dp"
                    android:layout_height="179dp"
                    android:contentDescription="@string/todo"
                    android:scaleType="centerCrop"
                    android:visibility="invisible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0"
                    app:srcCompat="@drawable/ic_launcher_foreground" />

                <Button
                    android:id="@+id/btnPrevious"
                    android:layout_width="146dp"
                    android:layout_height="48dp"
                    android:layout_marginEnd="204dp"
                    android:layout_marginBottom="20dp"
                    android:drawableLeft="@drawable/baseline_keyboard_arrow_left_24"
                    android:text="Previous"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"
                    app:cornerRadius="50dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtdetailDescription"
                    app:layout_constraintVertical_bias="0.916" />

                <Button
                    android:id="@+id/btnNext"
                    android:layout_width="146dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="20dp"
                    android:drawableRight="@drawable/baseline_keyboard_arrow_right_24"
                    android:text="NEXT"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"
                    app:cornerRadius="50dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtdetailDescription"
                    app:layout_constraintVertical_bias="1.0" />

                <ProgressBar
                    android:id="@+id/progressBar"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="371dp"
                    android:layout_height="179dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/imagePhoto"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/txtdetailTitleRead"
                    android:layout_width="343dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="12dp"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:text="@string/title"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/progressBar"
                    tools:ignore="TextSizeCheck" />

                <TextView
                    android:id="@+id/txtdetailCreator"
                    android:layout_width="219dp"
                    android:layout_height="26dp"
                    android:layout_marginStart="16dp"
                    android:text="@string/creator"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtdetailTitleRead"
                    tools:ignore="TextSizeCheck" />

                <TextView
                    android:id="@+id/txtdetailDescription"
                    android:layout_width="336dp"
                    android:layout_height="285dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/description"
                    android:textAlignment="viewStart"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toTopOf="@+id/btnRead"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtdetailCreator"
                    tools:ignore="UnknownIdInLayout" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>